fix fixed scrollbar

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,7 +1,7 @@
 @import url("../fonts/font-lists.css");
 
-
 // Max
+
 @media (max-width: 1100px) {
   .left-sidebar {
     display: none;
@@ -40,11 +40,11 @@
 
 // Min
 @media (min-width: 1281px) {
-  .sidebar {
-    min-width: 280px;
-    max-width: 360px;
-    flex-basis: 100%;
-  }
+  // .sidebar {
+  //   min-width: 280px;
+  //   max-width: 360px;
+  //   flex-basis: 100%;
+  // }
 }
 
 @media (min-height: 700px) {
